# readability

./: README.md  pyproject.toml
data/: EDGAR_Download_FORM-X_LogFile_1994-1994.txt  Load_MD_Logfile.txt  Parser.csv
data/1994/QTR3/: 19940701_10-K_edgar_data_316236_0000912057-94-002225_1.txt  19940701_10-K_edgar_data_763043_0000950130-94-000953_1.txt  19940701_10-K_edgar_data_98537_0000098537-94-000008_1.txt  19940705_10-K_edgar_data_79958_0000079958-94-000020_1.txt  19940706_10-K_edgar_data_731190_0000731190-94-000023_1.txt  19940707_10-K_edgar_data_314132_0000898430-94-000481_1.txt  19940714_10-K_edgar_data_93319_0000950168-94-000247_1.txt  19940715_10-K_edgar_data_91419_0000950152-94-000718_1.txt  19940718_10-K_edgar_data_30966_0000950148-94-000330_1.txt  19940718_10-K_edgar_data_804188_0000804188-94-000007_1.txt  19940719_10-K_edgar_data_14693_0000950131-94-001189_1.txt  19940719_10-K_edgar_data_69960_0000069960-94-000009_1.txt  19940719_10-K_edgar_data_791027_0000950152-94-000726_1.txt  19940725_10-K_edgar_data_314485_0000950148-94-000334_1.txt  19940726_10-K_edgar_data_33769_0000896463-94-000044_1.txt  19940726_10-K_edgar_data_46640_0000950132-94-000183_1.txt  19940726_10-K_edgar_data_57131_0000057131-94-000013_1.txt  19940726_10-K_edgar_data_797543_0000797543-94-000012_1.txt  19940727_10-K_edgar_data_37743_0000037743-94-000022_1.txt  (+155 more)
scripts/: Create_10X_WordCounts.py  EDGAR_DownloadForms_v2022.py  Generic_Parser.py  MOD_Load_MasterDictionary_v2022.py  MOD_Read_DocDict.py  MOD_Readability.py  notebook.ipynb
