[tool.poetry]
name = "tunyi_nlp_project"
version = "0.1.0"
description = ""
authors = ["tayoso <ososanyatayo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
DateTime = "^4.7"
requests = "^2.28.1"
pandas = "^1.5.1"
spacy = "^3.4.2"
textstat = "^0.7.3"
ipykernel = "^6.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
